--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,9 +13,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <title>Project 2</title>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script src="../../public/js/chirp.js"></script>
+  <script src="../../public/js/shopping.js"></script>
 </head>
 	<body>
+    {{!-- add headers so it apply to every age --}}
+
+
 		{{{ body }}}
 	</body>
 </html>
