pulling seeds file

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -32,6 +32,20 @@
       </div>
 
     </div>
+    <div class="row">
+      <div class="card col s3 left">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator" src="img/headphone.jpg">
+    
+        </div>
+        <div class="card-content">
+    
+          <p><a href="#" class="black-text darken-1-text right">Add to cart</a></p>
+        </div>
+      </div>
+    
+    
+    </div>
     <script src="../../public/js/shopping.js"></script>
     </div>
    
