--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,70 +1,43 @@
-<div class="container ">
-    <div class="row">
-      <div class="col s6">
-        <h5 class="heading h1">Shopping Cart</h5>
-      </div>
-      <div class="col s6">
-        <i class="medium material-icons right">shopping_cart</i>
-      </div>
-    
-    </div>
-    <div class="row">
-      <nav>
-        <div class="nav-wrapper blue-grey darken-1">
-        </div>
-      </nav>
-    </div>
-    <div class="row">
-      <div class="card-action">
-        <!-- Trivia Dropdwn -->
-        <div class="input-field col s4 right">
-          <select id="options">
-            <option value="" disabled selected>Select options</option>
-            <option value="1">Beauty</option>
-            <option value="2">Sports</option>
-            <option value="3">Food</option>
-            <option value="4">Apparel</option>
-            <option value="5">Entertainment</option>
-            <option value="5">Others</option>
-          </select>
-        </div>
-      
-      </div>
-
-    </div>
-    <div class="row">
-      <div class="card col s3 left">
-          
-          
-        <div class="card-image waves-effect waves-block waves-light">
-          
-          {{#each items}}    
-            
-            <a href="#"><img class="activator" src={{image}}></a>
-          {{/each}}
-
-          
-    
-        </div>
-        <div class="card-content">
-    
-          <p><a href="#" class="black-text darken-1-text right">Add to cart</a></p>
-        </div>
-      </div>
-    
-    
-    </div>
-    <script src="../../public/js/shopping.js"></script>
-    </div>
-   
-
+<div class="row">
+        <div class="card-action">
+          <!-- Trivia Dropdwn -->
+          <div class="input-field col s4 right">
+            <select id="options">
+              <option value="" disabled selected>Select options</option>
+              <option value="1">Beauty</option>
+              <option value="2">Sports</option>
+              <option value="3">Food</option>
+              <option value="4">Apparel</option>
+              <option value="5">Entertainments</option>
+              <option value="5">Others</option>
+            </select>
+          </div>
   
+        </div>
+  
+      </div>
+      <div class="row">
+        <div class="card col s3 left hoverable">
+  
+          <div class="card-image waves-effect waves-block waves-light">
+            <a href="itemDescription.html"><img class="activator" src= "img/headphone.jpg"></a>
+          </div>
+          <div class="card-content">
+            <h6 class="black-text left">Post Reviews</h6>
+            <h6><a href="#" class="black-text darken-1-text right">$90</a></h6>
+          </div>
+        </div>
+      </div>
 
-
-
-
-
-
-
-
- 
+      <div class="row">
+        <div class="card col s3 left hoverable">
+  
+          <div class="card-image waves-effect waves-block waves-light">
+            <a href="itemDescription.html"><img class="activator" src= "img/headphone.jpg"></a>
+          </div>
+          <div class="card-content">
+            <h6 class="black-text left">Post Reviews</h6>
+            <h6><a href="#" class="black-text darken-1-text right">$90</a></h6>
+          </div>
+        </div>
+      </div>
