added some front end js

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,8 +25,8 @@
                     <a href="itemDescription.html"><img class="activator" src={{image}}></a>
                 </div>
                 <div class="card-content">
-                    <h6 class="black-text left">Post Reviews</h6>
-                    <h6><a href="#" class="black-text darken-1-text right">$90</a></h6>
+                    <h6 class="black-text left">{{name}}</h6>
+                    <h6><a href="#" class="black-text darken-1-text right">${{price}}</a></h6>
                 </div>
             </div>
         </div>
