added onclick to transition to item description page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,9 +18,9 @@
     {{#each items}}
     
       
-        <div class="card large col s3 left hoverable">
+        <div class="card large col s3 left hoverable item" id={{id}}>
           <div class="card-image waves-effect waves-block waves-light">
-            <a href="itemsDescription.handlebars"><img class="activator" src={{image}}></a>
+            <img class="activator" src={{image}}>
           </div>
           <div class="card-content">
             <h6 class="black-text left">{{name}}</h6>
