working item description page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div class="container ">
   <div class="row">
     <div class="col s6">
-      <h5><a href="index.html" class="heading h1 black-text ">Shopping Cart</a></h5>
+      <h5><a href="#" class="heading h1 black-text ">Shopping Cart</a></h5>
     </div>
     <div class="col s6">
 
@@ -20,7 +20,7 @@
       
         <div class="card large col s3 left hoverable">
           <div class="card-image waves-effect waves-block waves-light">
-            <a href="itemsDescription.handlebars"><img class="activator" src={{image}}></a>
+            <a href="#"><img class="activator" src={{image}}></a>
           </div>
           <div class="card-content">
             <h6 class="black-text left">{{name}}</h6>
