--- a/views/itemsDescription.handlebars
+++ b/views/itemsDescription.handlebars
@@ -53,16 +53,20 @@
   </div>
 
     <div class="row">
-    <form class="col s12">
+    <form class="col s12 createReview">
       <div class="row">
         <div class="input-field col s12">
           <i class="material-icons prefix">insert_comment</i>
           <textarea id="icon_prefix2" class="materialize-textarea"></textarea>
           <label for="icon_prefix2">Add comments</label>
         </div>
+        <button class="btn waves-effect waves-light black" type="submit" name="action">Submit
+            <i class="material-icons right">send</i>
+        </button>
       </div>
     </form>
   </div>
+  
 
     <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
@@ -71,6 +75,8 @@
             <div id="chirp-area"></div>
         </div>
     </div>
+    
+    
     
 </div>
 
