adding reviews into database and displaying posted reviews

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div class="container ">
   <div class="row">
     <div class="col s6">
-      <h3><a href="#" class="heading h1 black-text ">Shopping Cart</a></h3>
+      <h3><a href="/" class="heading h1 black-text home">Shopping Cart</a></h3>
     </div>
     <div class="col s6">
 
