--- a/views/itemsDescription.handlebars
+++ b/views/itemsDescription.handlebars
@@ -1,7 +1,7 @@
 <div class="container ">
   <div class="row">
     <div class="col s6">
-      <h3><a href="#" class="heading h1 black-text ">Shopping Cart</a></h3>
+      <h3><a href="/" class="heading h1 black-text home">Shopping Cart</a></h3>
     </div>
     <div class="col s6">
 
@@ -34,48 +34,35 @@
         </div>
      
   </div>
-
+<div class = "review-container">
   <div class= "row"> 
     <h4 class="coolFont">Comments</h4>
   </div>
 
+<div class="container">
 
-   <div class="row">
-    <form class="col s12">
       <div class="row">
-        <div class="input-field col s12">
-          <i class="material-icons prefix">mode_edit</i>
-          <textarea id="icon_prefix1" class="materialize-textarea"></textarea>
-          <label for="icon_prefix1">Enter your name</label>
+        <div class="col-sm-8 col-sm-offset-2">
+          <p class="cool-font">Name</p>
+          <input class="form-control" type="text" id="name" placeholder="Enter Your Name">
+          <br>
+          <p class="cool-font">Comment</p>
+          <textarea class="form-control" rows="3" id="comment" placeholder="Enter Review Here!"></textarea>
+          <button id="submit" class="btn btn-lg pull-right">Submit!</button>
         </div>
       </div>
-    </form>
-  </div>
 
-    <div class="row">
-    <form class="col s12 createReview">
-      <div class="row">
-        <div class="input-field col s12">
-          <i class="material-icons prefix">insert_comment</i>
-          <textarea id="icon_prefix2" class="materialize-textarea"></textarea>
-          <label for="icon_prefix2">Add comments</label>
-        </div>
-        <button class="btn waves-effect waves-light black" type="submit" name="action">Submit
-            <i class="material-icons right">send</i>
-        </button>
-      </div>
-    </form>
-  </div>
+</div>
   
 
     <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
             <h4>Posted Comments</h4>
             <hr>
-            <div id="chirp-area"></div>
+            <div id="review-area"></div>
         </div>
     </div>
-    
+    </div>
     
     
 </div>
