updating post reviews

--- a/views/itemsDescription.handlebars
+++ b/views/itemsDescription.handlebars
@@ -28,11 +28,8 @@
         <div class="col s8 left">
         <strong><h4 class="coolFont">Description: </h4></strong> 
         <h5>{{{description}}}</h5>
-        
-
 
         </div>
-     
   </div>
 
   <div class= "row"> 
@@ -40,27 +37,24 @@
   </div>
 
 
-   <div class="row">
-    <form class="col s12">
-      <div class="row">
-        <div class="input-field col s12">
-          <i class="material-icons prefix">mode_edit</i>
-          <textarea id="icon_prefix1" class="materialize-textarea"></textarea>
-          <label for="icon_prefix1">Enter your name</label>
-        </div>
-      </div>
-    </form>
-  </div>
+  
 
     <div class="row">
     <form class="col s12 createReview">
+        <div class="row">
+        <div class="input-field col s12">
+          <i class="material-icons prefix">mode_edit</i>
+          <textarea id="icon_prefix1 name" class="materialize-textarea "></textarea>
+          <label for="icon_prefix1">Enter your name</label>
+        </div>
+      </div>
       <div class="row">
         <div class="input-field col s12">
           <i class="material-icons prefix">insert_comment</i>
-          <textarea id="icon_prefix2" class="materialize-textarea"></textarea>
+          <textarea id="icon_prefix2 comment" class="materialize-textarea"></textarea>
           <label for="icon_prefix2">Add comments</label>
         </div>
-        <button class="btn waves-effect waves-light black" type="submit" name="action">Submit
+        <button class="btn waves-effect waves-light black" id="submitBtn"type="submit" name="action">Submit
             <i class="material-icons right">send</i>
         </button>
       </div>
