completed api route to render shopping cart handlebar

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
     </div>
     <div class="col s6">
 
-      <a href="#"><i class="medium material-icons right black-text">shopping_cart</i></a>
+      <a href="#"><i class="medium material-icons right black-text cart">shopping_cart</i></a>
     </div>
   </div>
   <div class="row">
