--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,10 +12,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <title>Project 2</title>
+  <title>Shopping App</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
   <script src="/js/shopping.js"></script>
+  <script src="/js/add.js"></script>
  
 </head>
 <body>    
