updating confirmation page

--- a/views/shoppingCart.handlebars
+++ b/views/shoppingCart.handlebars
@@ -21,7 +21,7 @@
     <div class="col s8 left allOrder">
       {{#each items}}
       <div class="row">
-        <div class="card col s4 left item hoverable">
+        <div class="card col s4 left item hoverable" id={{id}}>
           
             <div class="card-image waves-effect waves-block waves-light">
               <a href="#"><img class="activator item-image" src={{image}}></a>
